# src/app.js
@@ -2,6 +2,7 @@ const express = require("express");
 const productRoutes = require("./routes/productRoutes");
 const categoryRoutes = require("./routes/categoryRoutes");
 const authenticationRoutes = require("./routes/authenticationRoutes");
+const customerRoutes = require("./routes/customerRoutes");
 const database = require("./config/database");
 const jwt = require("jsonwebtoken");
 const cors = require('cors');
@@ -10,8 +11,6 @@ const swaggerFile = require('./utils/swagger-output.json')
 
 const app = express();
 const PORT = 3000;
-
-const jwtSecret = "your_jwt_secret";
 
 app.use(express.json());
 
@@ -26,6 +25,7 @@ app.get("/", (req, res) => {
 app.use("/api/products", productRoutes);
 app.use("/api/category", categoryRoutes);
 app.use("/api/authentication", authenticationRoutes);
+app.use("/api/customer", customerRoutes);
 app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile))
 
 database.initializeDatabase().then(() => {
