# src/controllers/authenticationController.js
@@ -1,16 +1,23 @@
+const jwt = require("jsonwebtoken");
 const bcrypt = require('bcrypt');
-
-// implement db
+const Customer = require('../models/customerModel');
 
 async function login(req, res) {
-  const { username, password } = req.body;
+  const { email, password } = req.body;
 
-  if (username === "admin" && password === "password") {
-    const token = jwt.sign({ username }, jwtSecret, { expiresIn: "1y" });
-    return res.json({ message: "Authentication successful!", token });
-  } else {
-    return res.status(401).json({ message: "Authentication failed!" });
+  const customer = await Customer.findOne({ where: { email } });
+  
+  if (!customer) {
+    return res.status(401).json({ message: "Customer not found!" });
   }
+
+  const passwordMatch = await bcrypt.compare(password, customer.password);
+  if (!passwordMatch) {
+    return response.status(401).json({ error: 'Invalid password' });
+  }
+
+  const token = jwt.sign({ email }, process.env.JWT_SECRET_KEY, { expiresIn: "1y" });
+  return res.json({ message: "Authentication successful!", token });
 }
 
 module.exports = {
