# src/routes/customerRoutes.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const customerController = require("../controllers/customerController");
+
+const router = express.Router();
+
+router.post("/", customerController.createCustomer)
+
+module.exports = router;
